# qs

./: CMakeLists.txt
source/: CMakeLists.txt
source/application/: CMakeLists.txt  plugininfoviewer.cpp
source/application/nulltest/: nulltest.cpp  nulltest.h
source/application/recordsinatick/: sinarecorder.cpp
source/application/showsinatick/: showtick.cpp
source/core/: CMakeLists.txt  datatypes.h  defaultengine.cpp  defaultengine.h  defaultengine_p.h  engineabstract.cpp  engineabstract.h  gatewayabstract.cpp  gatewayabstract.h  riskmanager.cpp  riskmanager.h  sharedobjectmanager.cpp  sharedobjectmanager.h  shmtickinfo.cpp  shmtickinfo.h  shmtickinfo_p.h  strategyabstract.cpp  strategyabstract.h
source/core/ipc/: README.md  ipcdatatypes.h  readwritelocker.cpp  readwritelocker.h  readwritelocker_p.h  sharedobjectmanager.cpp  sharedobjectmanager.h  shmtickinfo.cpp  shmtickinfo.h  shmtickinfo_p.h
source/gateway/: CMakeLists.txt
source/gateway/sharedmemorygateway/: sharedmemorygateway.cpp  sharedmemorygateway.h  sharedmemorygateway_p.cpp  sharedmemorygateway_p.h
source/gateway/sina/: sinadatatypes.cpp  sinadatatypes.h  sinagateway.cpp  sinagateway.h  sinagateway.json.in  sinagateway_p.h
source/gateway/xtp/: xtpdatatypes.cpp  xtpdatatypes.h  xtpgateway.cpp  xtpgateway.h  xtpgateway.json.in  xtpgateway_p.cpp  xtpgateway_p.h
source/gateway/xtp/XTP_API/: xtpgateway._pcpp
source/gateway/xtp/XTP_API/demo/: Demo测试账号配置.doc  demo编译相关问题.doc  使用cmake生成demo工程文件.doc
source/gateway/xtp/XTP_API/doc/: XTP API常见问题.doc  XTP QuoteAPI使用UDP常见问题.doc
source/strategy/: CMakeLists.txt
source/strategy/record/: recordstrategy.cpp  recordstrategy.h  recordstrategy.json.in  recordstrategy_p.h  recordtickinfo.h
source/strategy/sina/: sinastrategy.cpp  sinastrategy.h  sinastrategy.json.in  sinastrategy_p.h
source/utils/: utils.h
